# DesktopGirlMinGW

./: CMakeLists.txt  ChatWidget.cpp  ChatWidget.h  GLCore.cpp  GLCore.h  README_AI.md  SettingsDialog.cpp  SettingsDialog.h  ai_server.py  deploy.bat  main.cpp  readme.md  requirements.txt  resources.qrc  start_ai_server.bat
LAppLive2D/Inc/: LAppLive2DManager.hpp  LAppModel.hpp
LAppLive2D/Src/: LAppDelegate.cpp  LAppLive2DManager.cpp  LAppModel.cpp  LAppView.cpp
ProjectSources/Inc/: AudioOutput.h
ProjectSources/Src/: AudioOutput.cpp
UserData/music/: readme.md
contact/: config.json  keymap.txt  out.json
